--- a/index.html
+++ b/index.html
@@ -1,7 +1,46 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+</head>
+
 <body>
+    <div class="heroe">
+        <h1 id="nombre_heroe">Heroe</h1>
+        <h3>
+            Nivel:
+            <lvl id="nivel_heroe">-1</lvl>
+        </h3>
+        <h3>
+            Experiencia:
+            <exp id="experiencia_heroe">-1</exp>
+        </h3>
+        <h3>
+            Salud:
+            <hp id="salud_heroe">-1</hp>
+        </h3>
+
+        <button id="btn_ataque">Atacar</button>
+        <button id="btn_defensa">Defensa</button>
+
+    </div>
+
+    <div class="enemigo">
+        <h1 id="nombre_enemigo">Enemigo</h1>
+        <h3>
+            Nivel:
+            <lvl id="nivel_enemigo">-1</lvl>
+        </h3>
+        <h3>
+            Salud:
+            <hp id="salud_enemigo">-1</hp>
+        </h3>
+    </div>
+
+
+
+
     <script src="confirmar.js"></script>
     <script src="entrada.js"></script>
     <script src="salida.js"></script>
