boton siguiente enemigo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
             Salud:
             <hp id="salud_enemigo">-1</hp>
         </h3>
+        <button id="siguiente">Siguiente Enemigo</button>
     </div>
+
+
+
 
 
 
