--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 </head>
 
-<body>
+<body id="cuerpo">
     <div class="heroe">
         <h1 id="nombre_heroe">Heroe</h1>
         <h3>
@@ -39,12 +39,14 @@
         <button id="siguiente">Siguiente Enemigo</button>
     </div>
 
+    <input type="radio" name="tamTexto" class="tamTexto" value="16px">16px
+    <br>
+    <input type="radio" name="tamTexto" class="tamTexto" value="20px">20px
 
 
 
-
-
-
+    <script src="preload.js"></script>
+    <script src="cambiar_texto.js"></script>
     <script src="confirmar.js"></script>
     <script src="entrada.js"></script>
     <script src="salida.js"></script>
