--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
         </div>
     </section>
 
+    <textarea name="notas" id="notas" cols="30" rows="10"></textarea>
+
 
 
 
     <script src="preload.js"></script>
     <script src="cambiar_texto.js"></script>
     <script src="cambiar_color.js"></script>
+    <script src="guardar nota.js"></script>
     <script src="confirmar.js"></script>
     <script src="entrada.js"></script>
     <script src="salida.js"></script>
