--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
 
 
-
+    <script src="confirmar.js"></script>
     <script src="preload.js"></script>
     <script src="cambiar_texto.js"></script>
     <script src="cambiar_color.js"></script>
     <script src="guardar nota.js"></script>
-    <script src="confirmar.js"></script>
+    <script src="cambio_nombre.js"></script>
     <script src="entrada.js"></script>
     <script src="salida.js"></script>
     <script src="combate.js"></script>
