--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
             <br>
             <input type="radio" name="cambioColor" class="cambioColor" value="yellow">Amarillo
         </div>
+        <div style="margin-right: 15px;">
+            <div>Color de fondo</div>
+            <input type="radio" name="cambioColorFondo" class="cambioColorFondo" value="brown">Marrón
+            <br>
+            <input type="radio" name="cambioColorFondo" class="cambioColorFondo" value="violet">Violeta
+            <br>
+            <input type="radio" name="cambioColorFondo" class="cambioColorFondo" value="grey">Gris
+            <br>
+            <input type="radio" name="cambioColorFondo" class="cambioColorFondo" value="orange">Naranja
+        </div>
     </section>
 
     <textarea name="notas" id="notas" cols="30" rows="10"></textarea>
@@ -70,6 +80,7 @@
     <script src="cambiar_color.js"></script>
     <script src="guardar nota.js"></script>
     <script src="cambio_nombre.js"></script>
+    <script src="cambiar_color_fondo.js"></script>
     <script src="entrada.js"></script>
     <script src="salida.js"></script>
     <script src="combate.js"></script>
