--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     </section>
 
     <textarea name="notas" id="notas" cols="30" rows="10"></textarea>
+    <br>
+    <button id="btn_reset">Borrar valores guardados</button>
 
 
 
