--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div style="margin-right: 15px;">
             <div>Color de fondo</div>
-            <input type="radio" name="cambioColorFondo" class="cambioColorFondo" value="brown">Marrón
+            <input type="radio" name="cambioColorFondo" class="cambioColorFondo" value="white">Blanco
             <br>
             <input type="radio" name="cambioColorFondo" class="cambioColorFondo" value="violet">Violeta
             <br>
