--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
             <br>
             <input type="radio" name="cambioColorFondo" class="cambioColorFondo" value="orange">Naranja
         </div>
+        <div style="margin-right: 15px;">
+            <div>Estilo de fuente</div>
+            <input type="checkbox" name="cambioEstilo" class="cambioEstilo" value="italic">Cursiva
+            <br>
+            <input type="checkbox" name="cambioEstilo" class="cambioEstilo" value="bold">Negrita
+        </div>
     </section>
 
     <textarea name="notas" id="notas" cols="30" rows="10"></textarea>
@@ -83,6 +89,7 @@
     <script src="guardar nota.js"></script>
     <script src="cambio_nombre.js"></script>
     <script src="cambiar_color_fondo.js"></script>
+    <script src="cambio_estilo.js"></script>
     <script src="entrada.js"></script>
     <script src="salida.js"></script>
     <script src="combate.js"></script>
